# Netflix-Streaming-Platform

./: .gitignore  README.md  docker-compose.yml
AP-assignment4.git/: config  packed-refs
AP-assignment4.git/objects/pack/: pack-1731cc77ff32c116412b3938fadb5c2e8b628c43.idx
android/myapp/: something.txt
android/myapp/app/: build.gradle.kts
android/myapp/gradle/: libs.versions.toml
android/myapp/gradle/wrapper/: gradle-wrapper.properties
client/: client.py
cpp_server/: CMakeLists.txt  Dockerfile  Makefile.mak
cpp_server/src/: AddMovieCommand.cpp  AddMovieCommand.h  App.cpp  App.h  ConsoleMenu.cpp  ConsoleMenu.h  DeleteCommand.cpp  DeleteCommand.h  DisplayRecommendedMoviesCommand.cpp  DisplayRecommendedMoviesCommand.h  DisplayRecommendedMoviesCommandTest.cpp  HelpCommand.cpp  HelpCommand.h  ICommand.h  IMenu.h  Utils.cpp  Utils.h
data/: placeholder.txt
frontend/: Dockerfile  package.json
frontend/src/: App.js
frontend/src/components/: NavBar.css  NavBar.js  ProtectedRoute.js  Search.css  Search.js  ToggleSwitch.css  ToggleSwitch.js
frontend/src/context/: AuthContext.js  ThemeContext.js
frontend/src/screens/HomeScreen/: HomeScreen.css  HomeScreen.js
frontend/src/screens/LoginScreen/: LoginScreen.css  LoginScreen.js
server/: Dockerfile  app.js  package.json
server/controllers/: category.js  movie.js  token.js  user.js
server/models/: category.js  counter.js  movie.js  user.js
server/routes/: category.js  movie.js  token.js  upload.js  user.js
server/services/: category.js  movie.js  token.js  user.js
(+52 files in other folders)
